--- a/app/src/main/res/layout/fragment_training_list.xml
+++ b/app/src/main/res/layout/fragment_training_list.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="List trainings"
+        app:title="@string/list_trainings"
         app:titleTextColor="@color/white">
 
         <ImageView
