--- a/app/src/main/res/layout/item_approach.xml
+++ b/app/src/main/res/layout/item_approach.xml
@@ -5,14 +5,14 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-
-    app:cardCornerRadius="20dp"
-    app:cardElevation="2dp">
+    app:cardCornerRadius="10dp"
+    app:cardElevation="2dp"
+    android:background="@drawable/background_item_approach">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_color">
+        android:background="@drawable/background_item_approach">
 
         <TextView
             android:id="@+id/tvApproach"
