--- a/app/src/main/res/layout/bottom_sheet_season_ticket_information.xml
+++ b/app/src/main/res/layout/bottom_sheet_season_ticket_information.xml
@@ -91,10 +91,11 @@
 
     <TextView
         android:id="@+id/tvDate_valid"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/background_color"
+        android:gravity="center"
         android:padding="4dp"
         android:textColor="@color/white"
         android:textSize="16sp"
