--- a/app/src/main/res/layout/item_exercise_list.xml
+++ b/app/src/main/res/layout/item_exercise_list.xml
@@ -53,6 +53,9 @@
             android:id="@+id/rvApproachInExerciseItem"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             app:layout_constraintEnd_toStartOf="@id/ivSwap"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvCommentExercise_exercise_item"
