--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,15 +3,17 @@
     <declare-styleable name="CalendarView">
         <attr name="month_text_color" format="color" />
         <attr name="day_text_color" format="color" />
-        <attr name="today_text_color" format="color"/>
-        <attr name="selected_day_text_color" format="color"/>
-        <attr name="ivLeft_color" format="color"/>
-        <attr name="ivRight_color" format="color"/>
+        <attr name="today_text_color" format="color" />
+        <attr name="selected_day_text_color" format="color" />
+        <attr name="ivLeft_color" format="color" />
+        <attr name="ivRight_color" format="color" />
         <attr name="selected_day_background" format="color" />
-        <attr name="today_background" format="reference"/>
-        <attr name="month_text_size" format="dimension"/>
-        <attr name="day_text_size" format="dimension"/>
-        <attr name="week_text_size" format="dimension"/>
+        <attr name="today_background" format="reference" />
+        <attr name="month_text_size" format="dimension" />
+        <attr name="day_text_size" format="dimension" />
+        <attr name="week_text_size" format="dimension" />
+        <attr name="active" format="boolean" />
+        <attr name="enabled_background" format="color" />
 
     </declare-styleable>
 </resources>
