add settings module

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -98,7 +98,7 @@
     </dialog>
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.yankin.trainingdiary.screen.settings.SettingsFragment"
+        android:name="com.yankin.settings.impl.presentation.settings.SettingsFragment"
         android:label="SettingsFragment"
         tools:layout="@layout/fragment_settings">
         <action
@@ -110,7 +110,7 @@
     </fragment>
     <fragment
         android:id="@+id/exerciseAutofillFragment"
-        android:name="com.yankin.trainingdiary.screen.exercise_autofill.ExerciseAutofillFragment"
+        android:name="com.yankin.settings.impl.presentation.exercise_autofill.ExerciseAutofillFragment"
         android:label="ExerciseAutofillFragment"
         tools:layout="@layout/fragment_exercise_autofill">
         <action
@@ -119,7 +119,7 @@
     </fragment>
     <dialog
         android:id="@+id/exerciseAutofillBottomDialog"
-        android:name="com.yankin.trainingdiary.screen.exercise_autofill.ExerciseAutofillBottomDialog"
+        android:name="com.yankin.settings.impl.presentation.exercise_autofill.ExerciseAutofillBottomDialog"
         android:label="ExerciseAutofillBottomDialog"
         tools:layout="@layout/bottom_sheet_exercise_autofill">
         <argument
@@ -164,7 +164,7 @@
     </dialog>
     <fragment
         android:id="@+id/informationFragment"
-        android:name="com.yankin.trainingdiary.screen.information.InformationFragment"
+        android:name="com.yankin.settings.impl.presentation.information.InformationFragment"
         android:label="InformationFragment"
         tools:layout="@layout/fragment_information"/>
     <dialog
