--- a/screens/training_create/impl/src/main/res/layout/bottom_sheet_add_training.xml
+++ b/screens/training_create/impl/src/main/res/layout/bottom_sheet_add_training.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/addTrainingDialog"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="wrap_content">
 
     <com.yankin.common.custom_view.CalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginHorizontal="12dp"
         app:ivLeft_color="@color/crimson"
         app:ivRight_color="@color/crimson"
         app:layout_constraintBottom_toTopOf="@+id/rvMuscleCroups"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:month_text_color="@color/crimson"
         app:month_text_size="20sp"
         app:selected_day_background="@drawable/background_color"
