--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -104,9 +104,9 @@
     </dialog>
     <dialog
         android:id="@+id/seasonTicketBottomDialog"
-        android:name="com.yankin.season_ticket.impl.presentation.season_ticket.SeasonTicketBottomDialog"
+        android:name="com.yankin.membership.impl.presentation.membership.MembershipCreateBottomDialog"
         android:label="SeasonTicketBottomDialog"
-        tools:layout="@layout/bottom_sheet_season_ticket">
+        tools:layout="@layout/bottom_sheet_create_membership">
         <action
             android:id="@+id/action_seasonTicketBottomDialog_to_trainingListFragment"
             app:destination="@id/trainingListFragment"
@@ -115,9 +115,9 @@
     </dialog>
     <dialog
         android:id="@+id/seasonTicketInfoBottomDialog"
-        android:name="com.yankin.season_ticket.impl.presentation.season_ticket_info.SeasonTicketInfoBottomDialog"
+        android:name="com.yankin.membership.impl.presentation.membership_info.MembershipBottomDialog"
         android:label="SeasonTicketInfoBottomDialog"
-        tools:layout="@layout/bottom_sheet_season_ticket_information">
+        tools:layout="@layout/bottom_sheet_membership">
         <action
             android:id="@+id/action_seasonTicketInfoBottomDialog_to_trainingListFragment"
             app:destination="@id/trainingListFragment"
